--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-list.ttl.vm
@@ -25,7 +25,9 @@ isoform:$isoform-name :$parentPredicate annotation:$annotation-uri .
 #end
 isoform:$isoform-name :$annotation.rdfPredicate annotation:$annotation-uri .
 ## special case for expression
-isoform:$isoform-name #if($annotation.isExpressionLevelDetected()):detectedExpression#else:undetectedExpression#end annotation:$annotation-uri .
+#if($annotation.isExpressionLevelDetected().isPresent())
+isoform:$isoform-name #if($annotation.isExpressionLevelDetected().get()):detectedExpression#else:undetectedExpression#end annotation:$annotation-uri .
+#end
 
 ##if($annotation.getConsensusExpressionLevelPredicat())
 ## isoform:$isoform-name :$annotation.getConsensusExpressionLevelPredicat() annotation:$annotation-uri .
