In publication, write <xref-list> only if non empty

--- a/web/src/main/webapp/WEB-INF/velocity/publication.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/publication.xml.vm
@@ -11,9 +11,11 @@
 			#end
 		#end
 	</author-list>
+	#if($publication.dbXrefs.size() > 0)
     <xref-list>
 		#foreach($xref in $publication.dbXrefs)
 			#parse('xref.xml.vm')
 		#end
     </xref-list>
+	#end
 </publication>
