added :interactant data for :Cofactor and :BinaryInteraction taken from annotation BioObject

--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -18,7 +18,7 @@
             #if($bioObject.getResourceType().toString().equals("EXTERNAL"))
                 <xref-ref resource-internal-ref='$bioObject.getId()'/>
 			#elseif($bioObject.getResourceType().toString().equals("INTERNAL"))
-                <ref accession='$bioObject.getAccession()' database='nextProt'/>
+                <ref accession='$bioObject.getAccession()' database='neXtProt'/>
 			#end
         </interactant>
 	#end
