--- a/web/src/main/webapp/WEB-INF/velocity/chromosomal-location-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/chromosomal-location-list.xml.vm
@@ -1,5 +1,7 @@
 <chromosomal-location-list>
 #foreach($chromosomalLocation in $entry.chromosomalLocations)
-	<chromosomal-location chromosome='$chromosomalLocation.getChromosome()' band='$chromosomalLocation.getBand()' strand='$chromosomalLocation.getStrand()' accession='$chromosomalLocation.getAccession()' gene-start='$chromosomalLocation.getFirstPosition()' gene-end='$chromosomalLocation.getLastPosition()'/>
+	#set($accession = $chromosomalLocation.getAccession())
+	#if(!$accession.matches("^(NX_)?ENSG.+$"))#set($accession = "")#end
+	<chromosomal-location chromosome='$chromosomalLocation.getChromosome()' band='$chromosomalLocation.getBand()' strand='$chromosomalLocation.getStrand()' accession='$accession' gene-start='$chromosomalLocation.getFirstPosition()' gene-end='$chromosomalLocation.getLastPosition()'/>
 #end
 </chromosomal-location-list>
