--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
@@ -23,13 +23,13 @@ annotation:$annotation-uri a :$annotation-type;
     :provenance db:$bioObject.database ;
     :accession "$bioObject.accession"^^xsd:string ;
 ##  :url "value needs to be provided from dao ?"^^xsd:string ;
-#if($bioType == "PROTEIN_ENTRY")    skos:exactMatch uniprot:$bioObject.accession ;
+#if($bioType == "PROTEIN")    skos:exactMatch uniprot:$bioObject.accession ;
 #end 
 ### chebi not yet available as rdf 
 ###else $bioObject.accession.toLowerCase()#end ;
   ] ;
 #elseif($resourceType == "INTERNAL")
-  :interactant#if($bioType == "PROTEIN_ENTRY") entry:#else isoform:#end$bioObject.accession ;
+  :interactant#if($bioType == "PROTEIN") entry:#else isoform:#end$bioObject.accession ;
 #end
 #end
 
