--- a/web/src/main/webapp/WEB-INF/velocity/autocomplete.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/autocomplete.xml.vm
@@ -2,24 +2,23 @@
 	<elapsedTime>${result.elapsedTime}</elapsedTime>
 	<entity>${result.entity}</entity>
 	<index>${result.index}</index>
-	<score>${result.maxScore}</score>
-	<found>${result.numFound}</found>
+	<score>${result.score}</score>
+	<found>${result.found}</found>
 	<rows>${result.rows}</rows>
-	<page>${result.page}</page>
 	<results>
 		#foreach($res in $result.results)
 			<result>
-				#foreach($prop in $res.properties.entrySet()) 
+				#foreach($prop in $res.entrySet())
 					<$prop.getKey()>$prop.getValue()</$prop.getKey()>
 				#end
 			</result>
 		#end
 	</results>
 	<facets>
-		#foreach($facet in $result.getFacets().values())
-			<facet name="$facet.getName()">
-			#foreach($field in $facet.getFacetFields())
-				<facet-field name="$field.getFirst()">$field.getSecond()</facet-field>
+		#foreach($prop in $result.getFacets().entrySet())
+			<facet name="$prop.getKey()">
+			#foreach($map in $prop.getValue())
+				<facet-field name="$map.get("name")">$map.get("count")</facet-field>
 			#end
 			</facet>
 		#end
