harmonised predicate for linking a family to its accession to be :term as we do for other terms

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/overview.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/overview.ttl.vm
@@ -6,7 +6,7 @@ entry:$entry.getUniqueName()
 #foreach($family in $entry.overview.families)
     :family [
        rdf:type :FamilyInfo ;
-       :accession cv:$StringUtils.slug($family.accession) ;
+       :term cv:$StringUtils.slug($family.accession) ;
 #if($family.region)
        :region "$family.region"^^xsd:string ;
 #end
