Removing attribute metadata-ac in experimental-context xml, encompass <cv-term> in <cv-term-list>

--- a/web/src/main/webapp/WEB-INF/velocity/experimental-context-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/experimental-context-list.xml.vm
@@ -1,29 +1,31 @@
 <experimental-context-list>
 #foreach($ctx in $entry.getExperimentalContexts())
-    <experimental-context internal-id='$ctx.getContextId()' metadata-ac='$ctx.metadataAC'>
-		#if($ctx.tissue)
-		<cv-term accession='$ctx.tissueAC' terminology='$StringUtils.camelToKebabCase($ctx.getTissue().getOntology())'>$ctx.getTissue().getName()</cv-term>
-		#end
+    <experimental-context internal-id='$ctx.getContextId()'>
+		<cv-term-list>
+			#if($ctx.tissue)
+			<cv-term accession='$ctx.tissueAC' terminology='$StringUtils.camelToKebabCase($ctx.getTissue().getOntology())'>$ctx.getTissue().getName()</cv-term>
+			#end
 
-		#if($ctx.developmentalStage)
-        <cv-term accession='$ctx.developmentalStageAC' terminology='$StringUtils.camelToKebabCase($ctx.getDevelopmentalStage().getOntology())'>$ctx.getDevelopmentalStage().getName()</cv-term>
-		#end
+			#if($ctx.developmentalStage)
+        	<cv-term accession='$ctx.developmentalStageAC' terminology='$StringUtils.camelToKebabCase($ctx.getDevelopmentalStage().getOntology())'>$ctx.getDevelopmentalStage().getName()</cv-term>
+			#end
 
-		#if($ctx.detectionMethod)
-		<cv-term accession='$ctx.detectionMethodAC' terminology='$StringUtils.camelToKebabCase($ctx.getDetectionMethod().getOntology())'>$ctx.getDetectionMethod().getName()</cv-term>
-		#end
+			#if($ctx.detectionMethod)
+			<cv-term accession='$ctx.detectionMethodAC' terminology='$StringUtils.camelToKebabCase($ctx.getDetectionMethod().getOntology())'>$ctx.getDetectionMethod().getName()</cv-term>
+			#end
 
-		#if($ctx.cellLine)
-        <cv-term accession='$ctx.cellLineAC' terminology='$StringUtils.camelToKebabCase($ctx.getCellLine().getOntology())'>$ctx.getCellLine().getName()</cv-term>
-		#end
+			#if($ctx.cellLine)
+			<cv-term accession='$ctx.cellLineAC' terminology='$StringUtils.camelToKebabCase($ctx.getCellLine().getOntology())'>$ctx.getCellLine().getName()</cv-term>
+			#end
 
-		#if($ctx.disease)
-        <cv-term accession='$ctx.diseaseAC' terminology='$StringUtils.camelToKebabCase($ctx.getDisease().getOntology())'>$ctx.getDisease().getName()</cv-term>
-		#end
+			#if($ctx.disease)
+			<cv-term accession='$ctx.diseaseAC' terminology='$StringUtils.camelToKebabCase($ctx.getDisease().getOntology())'>$ctx.getDisease().getName()</cv-term>
+			#end
 
-		#if($ctx.organelle)
-        <cv-term accession='$ctx.organelleAC' terminology='$StringUtils.camelToKebabCase($ctx.getOrganelle().getOntology())'>$ctx.getOrganelle().getName()</cv-term>
-		#end
+			#if($ctx.organelle)
+			<cv-term accession='$ctx.organelleAC' terminology='$StringUtils.camelToKebabCase($ctx.getOrganelle().getOntology())'>$ctx.getOrganelle().getName()</cv-term>
+			#end
+		</cv-term-list>
     </experimental-context>
 #end
 </experimental-context-list>
