--- a/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
@@ -81,7 +81,11 @@
     <gene-list>
     #foreach($entityName in $entry.overview.geneNames)
         <gene>
+        	#if($entityName.category.equals('ORF'))
+            <gene-name type="ORF">$entityName.name</gene-name>
+		    #else
             <gene-name type="primary">$entityName.name</gene-name>
+            #end
             #foreach($synonym in $entityName.synonyms)
             #if($synonym.category.equals('ORF'))
                 <gene-name type="ORF">$synonym.name</gene-name>
