Change "level" parameter with "family-type"

--- a/web/src/main/webapp/WEB-INF/velocity/family.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/family.xml.vm
@@ -1,6 +1,6 @@
 #if(!$hierarchy.isEmpty())
 #set($currentFamily=$hierarchy.remove(0))
-<family level="$currentFamily.level">
+<family family-type="$currentFamily.level">
     <cv-term accession="$currentFamily.accession" terminology="uniprot-family-cv">$currentFamily.name</cv-term>
     #if($currentFamily.region)
         <family-region>$currentFamily.region</family-region>
