--- a/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
@@ -101,7 +101,7 @@
 #if($entry.overview.families.size() > 0)
     <family-list>
         #foreach($family in $entry.overview.families)
-            #set($hierarchy=$family.getHierarchyFromRoot())
+            #set($hierarchy=$NXUtils.getFamilyHierarchyFromRoot($family))
             #parse("family.xml.vm")
         #end
     </family-list>
