Add carriage return token (${CR}) in text exports

--- a/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
@@ -4,6 +4,6 @@
 #set ( $entrySequenceVersion = $entry.getOverview().getHistory().getSequenceVersion() )
 #set ( $entryVersion = $entry.getOverview().getHistory().getUniprotVersion() )
 #foreach($isoform in $entry.isoforms)
-$NXUtils.buildPeffHeader($entry, $isoform, $protName, $geneName, $entrySequenceVersion, $entryVersion, $entryProteinExistence)
-$StringUtils.wrapText($isoform.getSequence(), 60)
+$NXUtils.buildPeffHeader($entry, $isoform, $protName, $geneName, $entrySequenceVersion, $entryVersion, $entryProteinExistence)${CR}
+$StringUtils.wrapText($isoform.getSequence(), 60)${CR}
 #end
