--- a/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
@@ -39,6 +39,9 @@
         <chain>
             <recommended-name>
 	            <chain-name qualifier="#if($entityName.getQualifier())$entityName.getQualifier()#end">$entityName.name</chain-name>
+                #foreach($otherEntity in $entityName.getOtherRecommendedEntityNames())
+                    <chain-name qualifier="#if($otherEntity.getQualifier())$otherEntity.getQualifier()#end">$otherEntity.name</chain-name>
+                #end
             </recommended-name>
 	   #if($entityName.synonyms)
 	        <alternative-name-list>
@@ -61,6 +64,9 @@
         <region>
             <recommended-name>
 	            <region-name qualifier="#if($entityName.getQualifier())$entityName.getQualifier()#end">$entityName.name</region-name>
+                #foreach($otherEntity in $entityName.getOtherRecommendedEntityNames())
+                    <region-name qualifier="#if($otherEntity.getQualifier())$otherEntity.getQualifier()#end">$otherEntity.name</region-name>
+                #end
 	        </recommended-name>
 	   #if($entityName.synonyms)
 	        <alternative-name-list>
