--- a/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
@@ -10,11 +10,12 @@
         <recommended-name>
     #set ( $recommendedName = $entry.getOverview().getRecommendedProteinName() )
             <protein-name qualifier="#if($recommendedName.getQualifier())$recommendedName.getQualifier()#end">$recommendedName.name</protein-name>
-	#if($recommendedName.synonyms)
-	    #foreach($synName in $recommendedName.synonyms)
-	        <protein-name qualifier="#if($synName.getQualifier())$synName.getQualifier()#end">$synName.name</protein-name>
+	    #foreach($otherEntity in $recommendedName.getOtherRecommendedEntityNames())
+	        <protein-name qualifier="#if($otherEntity.getQualifier())$otherEntity.getQualifier()#end">$otherEntity.name</protein-name>
 	    #end
-	#end
+        #foreach($synName in $recommendedName.synonyms)
+            <protein-name qualifier="#if($synName.getQualifier())$synName.getQualifier()#end">$synName.name</protein-name>
+        #end
         </recommended-name>
 ## ----------------- ALTERNATIVE-NAMES (LIST) ------------------------------
         <alternative-name-list>
