Do not set title in Publication if not found

--- a/web/src/main/webapp/WEB-INF/velocity/publication.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/publication.xml.vm
@@ -1,7 +1,9 @@
 <publication type="$publication.publicationType.toLowerCase()" #if($publication.getPublicationDate())date="$publication.getTextDate()"#end #if($publication.isLocalizable()) name="$publication.getPublicationLocationName()" #if($publication.isLocalizableInBookMedium()) #if($publication.isLocatedInScientificJournal()) volume="$publication.getVolume()" #end first="$publication.getFirstPage()" last="$publication.getLastPage()"		#if($publication.isLocatedInEditedVolumeBook()) publisher="$publication.getPublisherName()" city="$publication.getPublisherCity()" #end	#end	#end internal-id="$publication.publicationId">
+#if($publication.hasTitle())
 	<title>
 	    <![CDATA[$publication.title]]>
 	</title>
+#end
 #if($publication.hasEditors())
     <editor-list>
 		#foreach($editors in $publication.editors)
@@ -9,6 +11,7 @@
 		#end
     </editor-list>
 #end
+#if($publication.hasAuthors())
 	<author-list>
 		#foreach($author in $publication.authors)
 			#if($author.isPerson())
@@ -18,6 +21,7 @@
 			#end
 		#end
 	</author-list>
+#end
 	#if($publication.dbXrefs.size() > 0)
     <xref-list>
 		#foreach($xref in $publication.dbXrefs)
