--- a/web/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
@@ -5,17 +5,16 @@ publication:$publication.getMD5() a :Publication;
 #if($publication.getIsLargeScale())
     rdf:type :LargeScalePublication;
 #end
-
 #if($publication.hasTitle())
 #set($UNESCAPED_CDATA = $publication.title)
     :title """$StringUtils.clean($UNESCAPED_CDATA)"""^^xsd:string;
 #end
+    :pubType "$publication.getPublicationType()"^^xsd:string;
 #if($publication.isLocalizable())
     :journal "$publication.getPublicationLocationName()"^^xsd:string;
 #if($publication.getPublicationYear())
     :year "$publication.getPublicationYear()"^^xsd:string;
 #end
-
 #if($publication.isLocalizableInBookMedium())
 #if($publication.isLocatedInScientificJournal())
     :volume "$publication.getVolume()"^^xsd:string;
@@ -24,47 +23,43 @@ publication:$publication.getMD5() a :Publication;
     :publisher "$publication.getPublisherName()"^^xsd:string;
     :city "$publication.getPublisherCity()"^^xsd:string;
 #end
-#end
     :firstPage "$publication.getFirstPage()"^^xsd:string;
     :lastPage "$publication.getLastPage()"^^xsd:string;
 #end
-
+#end
 #if($publication.hasAuthors())
 #foreach($author in $publication.authors)
 #if($author.isPerson())
     :author[ a :Person;
 #if(!$author.suffix.equals(""))
-    :name "$author.getForeName() $author.getLastName() $author.getSuffix()"^^xsd:string;
-    :suffix "$author.getSuffix()"^^xsd:string;
+      :name "$author.getForeName() $author.getLastName() $author.getSuffix()"^^xsd:string;
+      :suffix "$author.getSuffix()"^^xsd:string;
 #else
-    :name "$author.getForeName() $author.getLastName()"^^xsd:string;
+      :name "$author.getForeName() $author.getLastName()"^^xsd:string;
 #end
     ];
 #else
     :author[ a :Consortium;
-	:name "$author.getLastName()"^^xsd:string;
+      :name "$author.getLastName()"^^xsd:string;
     ];
 #end
 #end
 #end
-
 #if($publication.hasEditors())
 #foreach($editor in $publication.editors)
     :editor[ a :Person;
 #if(!$editor.suffix.equals(""))
-    :name "$editor.getForeName() $editor.getLastName() $editor.getSuffix()"^^xsd:string;
-    :suffix "$editor.getSuffix()"^^xsd:string;
+      :name "$editor.getForeName() $editor.getLastName() $editor.getSuffix()"^^xsd:string;
+      :suffix "$editor.getSuffix()"^^xsd:string;
 #else
-    :name "$editor.getForeName() $editor.getLastName()"^^xsd:string;
+      :name "$editor.getForeName() $editor.getLastName()"^^xsd:string;
 #end
     ];
 #end
 #end
-
 #if($publication.hasDbXrefs())
 #foreach($xref in $publication.getDbXrefs())
     :from "$StringUtils.slug($xref.getDatabaseName()):$xref.getAccession()"^^xsd:string;
 #end
 #end
     .
-
