--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -40,7 +40,7 @@
 
 	## might have no properties so need to check
 	#set($annotationProperties = $annotation.getProperties())
-	#if(($annotationProperties) && ($annotationProperties.size() > 0))
+	#if(($annotationProperties) && (!$annotationProperties.isEmpty()))
     <property-list>
         #foreach($property in $annotationProperties)
 			#if(!$property.getName().equals("rank"))
@@ -51,13 +51,13 @@
 	#end
 
 	#set($annotationEvidence = $annotation.getEvidences())
-    #if($annotationEvidence && ($annotationEvidence.size() > 0) )
+    #if($annotationEvidence && (!$annotationEvidence.isEmpty()) )
     <evidence-list>
         #foreach($evidence in $annotationEvidence)
 			## should include qualifier-type='$evidence.getQualifierType()' 
 			<evidence is-negative='$evidence.isNegativeEvidence()' resource-internal-ref='$evidence.getResourceId()'  resource-assoc-type='$evidence.getResourceAssociationType()' #if($evidence.getQualityQualifier()) quality='$evidence.getQualityQualifier()' #end resource-type='$evidence.getResourceType()' #if($evidence.getExperimentalContextId()>0) experimental-context-internal-ref='$evidence.getExperimentalContextId()' #end #if($evidence.getAssignedBy()) source-internal-ref='$evidence.getAssignedBy()' #end >
-				#if($evidence.getPropertiesNames())
-                    <cv-term accession="$evidence.getEvidenceCodeAC()" terminology="$StringUtils.camelToKebabCase($evidence.getEvidenceCodeOntology())">$evidence.getEvidenceCodeName()</cv-term>
+				<cv-term accession="$evidence.getEvidenceCodeAC()" terminology="$StringUtils.camelToKebabCase($evidence.getEvidenceCodeOntology())">$evidence.getEvidenceCodeName()</cv-term>
+				#if(!$evidence.getPropertiesNames().isEmpty())
                     <property-list>
 						#foreach($pk in $evidence.getPropertiesNames())
 							<property name="$pk" value="$evidence.getPropertyValue($pk)" />
