--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -39,13 +39,11 @@
 	#end
 
 	## might have no properties so need to check
-	#set($annotationProperties = $annotation.getProperties())
-	#if(($annotationProperties) && (!$annotationProperties.isEmpty()))
+	#set($annotationProperties = $annotation.getPropertiesExceptName("rank"))
+	#if(!$annotationProperties.isEmpty())
     <property-list>
         #foreach($property in $annotationProperties)
-			#if(!$property.getName().equals("rank"))
-				<property name='$property.getName()' value='$property.getValue()' #if($property.getValueType()) value-type='$property.getValueType()' #end #if($property.getAccession()) accession='$property.getAccession()' #end />
-			#end
+			<property name='$property.getName()' value='$property.getValue()' #if($property.getValueType()) value-type='$property.getValueType()' #end #if($property.getAccession()) accession='$property.getAccession()' #end />
 		#end
     </property-list>
 	#end
