--- a/web/src/main/webapp/WEB-INF/velocity/mapping-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/mapping-list.xml.vm
@@ -1,4 +1,4 @@
-#if($entry.peptideMappings && $entry.peptideMappings)
+#if($entry.peptideMappings || $entry.srmPeptideMappings)
 <mapping-list>
     #if($entry.peptideMappings) #parse('peptide-list.xml.vm') #end
     #if($entry.srmPeptideMappings) #parse('srm-peptide-list.xml.vm') #end
