--- a/web/src/main/webapp/WEB-INF/velocity/entry.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/entry.xml.vm
@@ -8,5 +8,5 @@
     #if($NXUtils.hasMappings($entry)) #parse('mapping-list.xml.vm') #end
     #if($entry.publications) #parse('publication-list.xml.vm') #end
     #if($entry.xrefs) #parse('xref-list.xml.vm') #end
-	#if($entry.experimentalContexts) #parse('experimental-context-list.xml.vm') #end	
+	#if($entry.experimentalContexts && !$entry.experimentalContexts.isEmpty()) #parse('experimental-context-list.xml.vm') #end
 </entry>
