--- a/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
@@ -1,9 +1,4 @@
-#if(  $entry.getOverview().hasMainProteinName() ) #set ( $protName = $entry.getOverview().getMainProteinName() )#end
-#if(  $entry.getOverview().hasMainGeneName() ) #set ( $geneName = $entry.getOverview().getMainGeneName() )#end
-#set ( $entryProteinExistence = $entry.getOverview().getHistory().getProteinExistenceLevel() )
-#set ( $entrySequenceVersion = $entry.getOverview().getHistory().getSequenceVersion() )
-#set ( $entryVersion = $entry.getOverview().getHistory().getUniprotVersion() )
 #foreach($isoform in $entry.isoforms)
-$NXUtils.buildPeffHeader($entry, $isoform, $protName, $geneName, $entrySequenceVersion, $entryVersion, $entryProteinExistence)${CR}
-$StringUtils.wrapText($isoform.getSequence(), 60)${CR}
+>nxp:$NXUtils.buildPeffHeader($entry, $isoform) ${CR}
+$StringUtils.wrapText($isoform.getSequence(), 60) ${CR}
 #end
